--- a/ansible/PF/POST/pf_gw_create.yml
+++ b/ansible/PF/POST/pf_gw_create.yml
@@ -1,22 +1,3 @@
-- name: PF Gateway Connection Check
-  uri:
-    url: '{{ PINGFED_BASE_URL }}/pf-admin-api/v1/pingOneConnections'
-    user: '{{ PF_USERNAME }}'
-    password: '{{ PF_PASSWORD }}'
-    method: GET
-    headers:
-      X-Xsrf-Header: 'PingFederate'
-    status_code: 200
-    validate_certs: no
-  register: gateway_check
-  retries: 2
-
-- name: PF Gateway Connection List
-  set_fact:
-    pf_gateway_list: "{{ gateway_check.json['items'] |
-                    map(attribute='name') |
-                    list }}"
-
 - name: PF Gateway Check
   uri:
     url: '{{ API_LOCATION }}/environments/{{ ENV_ID }}/gateways'
@@ -52,9 +33,7 @@
     status_code: 201
   register: gw_create
   retries: 2
-  when: >
-    "PING_FED-DEMO_Gateway" not in p1_gateway_list and
-    "PING_ONE_to_PING_FED_DEMO_Gateway" not in pf_gateway_list
+  when: '"PING_FED-DEMO_Gateway" not in p1_gateway_list'
 
 - name: PF Gateway ID (Existing)
   set_fact:
@@ -62,16 +41,12 @@
                     selectattr('name', 'match', 'PING_FED-DEMO_Gateway') |
                     map(attribute='id') |
                     list | first }}"
-  when: >
-    "PING_FED-DEMO_Gateway" in p1_gateway_list and
-    "PING_ONE_to_PING_FED_DEMO_Gateway" not in pf_gateway_list
+  when: '"PING_FED-DEMO_Gateway" in p1_gateway_list'
 
 - name: PF Gateway ID (New)
   set_fact:
     gateway_id: "{{ gw_create.json.id }}"
-  when: >
-    "PING_FED-DEMO_Gateway" not in p1_gateway_list and
-    "PING_ONE_to_PING_FED_DEMO_Gateway" not in pf_gateway_list
+  when: '"PING_FED-DEMO_Gateway" not in p1_gateway_list'
 
 - name: PF Gateway Credential Check (Existing only)
   uri:
@@ -82,9 +57,7 @@
     status_code: 200
   register: credential_get
   retries: 2
-  when: >
-    "PING_FED-DEMO_Gateway" not in p1_gateway_list and
-     "PING_ONE_to_PING_FED_DEMO_Gateway" not in pf_gateway_list
+  when: '"PING_FED-DEMO_Gateway" not in p1_gateway_list'
 
 - name: PF Gateway Credential List (Existing only)
   set_fact:
@@ -92,9 +65,7 @@
                       selectattr('lastUsedAt', 'undefined' ) |
                       map(attribute='id') |
                       list }}"
-  when: >
-    "PING_FED-DEMO_Gateway" not in p1_gateway_list and
-     "PING_ONE_to_PING_FED_DEMO_Gateway" not in pf_gateway_list
+  when: '"PING_FED-DEMO_Gateway" not in p1_gateway_list'
 
 - name: PF Gateway Credential Delete (Existing only)
   uri:
@@ -105,9 +76,7 @@
     status_code: 204
   retries: 2
   loop: "{{ credential_list }}"
-  when: >
-    "PING_FED-DEMO_Gateway" not in p1_gateway_list and
-     "PING_ONE_to_PING_FED_DEMO_Gateway" not in pf_gateway_list
+  when: '"PING_FED-DEMO_Gateway" not in p1_gateway_list'
 
 - name: PF Gateway Credential Create
   uri:
@@ -119,12 +88,10 @@
     status_code: 201
   register: gw_cred_response
   retries: 2
-  when:  '"PING_ONE_to_PING_FED_DEMO_Gateway" not in pf_gateway_list'
 
 - name: PF Gateway Cred Value
   set_fact:
     gateway_cred: "{{ gw_cred_response.json.credential }}"
-  when:  '"PING_ONE_to_PING_FED_DEMO_Gateway" not in pf_gateway_list'
 
 - name: PF Gateway Environment Roles Check
   uri:
@@ -135,7 +102,6 @@
     status_code: 200
   register: role_get
   retries: 2
-  when:  '"PING_ONE_to_PING_FED_DEMO_Gateway" not in pf_gateway_list'
 
 #use | to use multiple match values
 - name: PF Gateway List Roles
@@ -144,7 +110,6 @@
                       selectattr('name', 'match', 'Environment Admin|Identity Data Admin') |
                       map(attribute='id') |
                       list }}"
-  when:  '"PING_ONE_to_PING_FED_DEMO_Gateway" not in pf_gateway_list'
 
 - name: PF Gateway Roles Check
   uri:
@@ -155,14 +120,12 @@
     status_code: 200
   register: gw_role_get
   retries: 2
-  when:  '"PING_ONE_to_PING_FED_DEMO_Gateway" not in pf_gateway_list'
 
 - name: PF Gateway List Gateway Roles
   set_fact:
     gw_role_list: "{{ gw_role_get.json._embedded.roleAssignments |
                   map(attribute='role.id') |
                   list }}"
-  when:  '"PING_ONE_to_PING_FED_DEMO_Gateway" not in pf_gateway_list'
 
 - name: PF Gateway Role Add
   uri:
@@ -185,9 +148,26 @@
     body_format: json
   loop: "{{ p1_role_list }}"
   retries: 2
-  when: >
-    item not in gw_role_list and
-     "PING_ONE_to_PING_FED_DEMO_Gateway" not in pf_gateway_list
+  when: item not in gw_role_list
+
+- name: PF Gateway Connection Check
+  uri:
+    url: '{{ PINGFED_BASE_URL }}/pf-admin-api/v1/pingOneConnections'
+    user: '{{ PF_USERNAME }}'
+    password: '{{ PF_PASSWORD }}'
+    method: GET
+    headers:
+      X-Xsrf-Header: 'PingFederate'
+    status_code: 200
+    validate_certs: no
+  register: gateway_check
+  retries: 2
+
+- name: PF Gateway Connection List
+  set_fact:
+    pf_gateway_list: "{{ gateway_check.json['items'] |
+                    map(attribute='name') |
+                    list }}"
 
 - name: PF Gateway Create In PF
   uri:
